--- a/lollo-port/public/index.html
+++ b/lollo-port/public/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
-    <link href="%PUBLIC_URL%/favicon.ico" rel="icon"/>
+    <link href="%PUBLIC_URL%/icon-web-site.ico" rel="icon"/>
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
     <meta content="#000000" name="theme-color"/>
     <meta
-            content="Web site created using create-react-app"
+            content="This web site contains information about Lorenzo Bruni"
             name="description"
     />
 
